--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.PlayerNetflix" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">#D61E21</item>
+        <item name="colorPrimaryDark">#780000 </item>
+        <item name="colorAccent">#ff4f4f</item>
+        <item name="android:textColor">@color/white</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
